# RSI

./: .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml  ruff.toml
docs/: ARCHITECTURE.md  DECISIONS.md  RESUME_GUIDE.md  ROADMAP.md  TECHNICAL_REPORT.md
examples/: coding_experiment.py  governed_modules.py  quickstart.py
schemas/: AcceptanceCriterion.json  ApprovalRecord.json  BundleDiff.json  CapabilityToken.json  ChangeTarget.json  Confidence.json  Constraint.json  ContextPackage.json  DeploymentRecord.json  DeploymentScope.json  EvaluationResult.json  Event.json  EvidenceItem.json  ExperimentArm.json  ExperimentBudget.json  ExperimentRecord.json  FieldChange.json  GateResult.json  ImprovementProposal.json  Integrity.json  MemoryItem.json  MemoryLink.json  MetricVector.json  MissionRequest.json  MissionSpec.json  ModelRef.json  ModuleManifest.json  ModuleRef.json  Objective.json  PairedAnalysis.json  PermissionSpec.json  PromotionDecision.json  Randomization.json  ResourceBudget.json  ResourceProfile.json  ResultIntegrity.json  RetryPolicy.json  RollbackRecord.json  SignatureRecord.json  SourceRef.json  (+5 more)
scripts/: export_schemas.py  run_stage1_campaign.py
tests/: test_artifacts.py  test_campaign.py  test_coding_domain.py  test_consolidation.py  test_contextual_worker.py  test_contracts.py  test_dashboard.py  test_deployment.py  test_e2e_replay.py  test_egress.py  test_experiment.py  test_gates.py  test_improvement_loop.py  test_ledger.py  test_memory.py  test_module_runtime.py  test_modules.py  test_openai_proposer.py  (+8 more)
(+88 files in other folders)
